Changes in version 1.0-21:

* Fixed two long-standing bugs in AsciiGridImpute and AsciiGridPredict. One was
that the output grid headers would not be output correctly when the nodata 
argument was used and the other delt with a problem when predict returned a matrix.
* Modified the examples in AsciiGridImpute so that they use a tempdir() for output files.
* Added the use of grmsd() in the examples in yai().
* Fixed return value in grmsd() when argument rtnVectors is TRUE

Changes in version 1.0-20:

* Added varSelection() to aid in variable selection. A plot function is 
include to aid in understanding the results; bestVars() returns what seem to be
a set of "best" variables for objects created by varSelection().
* Added grmsd() to compute a generalized root mean square error which is a Mahalanobis
distance between observed and imputed. Provides a single score useful for ranking
imputation models and methods (or returns vectors of distances).
* Added rmsd(); it is an alias to rmsd.yai().
* Added method="median" to function impute.
* Added method="msnPP" to function yai to enable using canonical correlation via 
projection pursuit from package ccaPP
* Added ensembleImpute() to get an mean or median imputation for several
separate imputations. Computes the mode for factors.
* Added John Coulston as an author on some of the new functions and the package.
* Added bootstrap= option to yai() so that reference observations can 
be sampled with replacement forming a bootstrap rep.
* Added sampleVars= option to yai() so that X-, Y- or both kinds of variables
can be sampled.
* Added buildConsensus() to find a consensus imputation over several 
reps and forming one yai object. 
* Added (at long last) a predict function.
* Added the ability to specify the scaling values for rmsd.yai and compare.yai
* Modified some help files to improve acknowledgments and cross references.
* Fixed a small typographical error in the help for correctBias(), accomplished 