@@ -1,6 +1,6 @@
 Package: yaImpute
 Version: 1.0-21
-Date: 2013-08-07
+Date: 2014-01-31
 Title: yaImpute: An R Package for k-NN Imputation
 Author: Nicholas L. Crookston, Andrew O. Finley, John Coulston (Sunil Arya and David Mount for ANN)
 Copyright: ANN library is copyright University of Maryland and Sunil Arya and 
