@@ -1,5 +1,8 @@
 Changes in version 1.0-21:
 
+* Added an argument to yai() that allows one to specify a different subset of X-variables
+for each Y-variable. 
+* Fixed a bug in reporting the results when method="randomForest" and the rfmethod="regression".
 * Fixed two long-standing bugs in AsciiGridImpute and AsciiGridPredict. One was
 that the output grid headers would not be output correctly when the nodata 
 argument was used and the other delt with a problem when predict returned a matrix.
